# filter_modelling

./: .gitignore  2D1P.py  CMakeLists.txt  README.md  arcus_job.sh  arcus_job_vis.sh  check_solutions.cpp  common.cpp  equations.py  filter.cpp  filter.h  fmm_eval.cpp  kernels.py  matrix_valued_kernel.nb  matrix_valued_kernel2.nb  matrix_valued_kernel3.nb  optimc.cpp  particular.py  particular2.py  particular3.py  particular_LMAPS.h  particular_MAPS.h  particular_wendland.py  restart.sh  run_fmm.sh  run_optim.sh  run_random_sim.sh  run_sim.sh  run_test.sh  setup_knots.cpp  setup_knots.h  simulation.cpp  solve_laplace_BEM.cpp  solve_laplace_BEM.h  solve_stokes_BEM.cpp  solve_stokes_BEM.h  solve_stokes_Compact.cpp  solve_stokes_Compact.h  solve_stokes_LMAPS.cpp  solve_stokes_LMAPS.h  (+8 more)
